# bad_zip

./: .clang-format  .gitignore  CMakeLists.txt
include/bad_zip/: ArgParse.hpp  argparse.hpp
include/bad_zip/engine/: BZipEngine.hpp
include/bad_zip/logging/: Logger.hpp
notes/: arguments.md  pointer_and_reference_notes.md  setup.md
src/: ArgParse.cpp  argparse.cpp  main.cpp
src/logging/: Logger.cpp
tests/: ArgParseTests.cpp  argparse_tests.cpp
tests/logging/: LoggerTests.cpp
